--- a/src/app/maps/pages/zoom-range/zoom-range.component.html
+++ b/src/app/maps/pages/zoom-range/zoom-range.component.html
@@ -1,4 +1,4 @@
-<div id="map" class="map-container">
+<div #map class="map-container">
     
 </div>
 
@@ -11,10 +11,14 @@
         <input type="range" class="form-range">
     </div>
     <div class="col-12">
-        <button class="btn btn-primary">
+        <button 
+        (click)="zoomOut()"
+        class="btn btn-primary">
             -
         </button>
-        <button class="btn btn-primary float-end">
+        <button 
+        (click)="zoomIn()"
+        class="btn btn-primary float-end">
             +
         </button>
     </div>
